--- a/view/frontend/templates/checkout/cart/item/item.phtml
+++ b/view/frontend/templates/checkout/cart/item/item.phtml
@@ -80,7 +80,7 @@ $product = $_item->getProduct();
                        data-cart-url-submit="<?= /* @escapeNotVerified */
                        $block->getUrl('checkout/sidebar/updateItemQty') ?>"
                        data-cart-url-update="<?= /* @escapeNotVerified */
-                       $block->getUrl('checkout/order/cart') ?>"
+                       $block->getUrl('sveacheckout/order/cart') ?>"
                        data-cart-url-remove="<?= /* @escapeNotVerified */
                        $block->getUrl('checkout/sidebar/removeItem'); ?>"
                        value="<?php /* @escapeNotVerified */
