--- a/view/frontend/templates/main.phtml
+++ b/view/frontend/templates/main.phtml
@@ -1,3 +1,9 @@
+<?php
+/**
+ * @var $block Svea\Checkout\Block\Checkout
+ */
+
+?>
 <div id="sveaOrder">
     <div class="svea-checkout-title" data-role="title">
         <h4 id="svea-checkout-review-heading" role="heading" aria-level="2">
