--- a/view/frontend/layout/svea_checkout_order_success.xml
+++ b/view/frontend/layout/svea_checkout_order_success.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <title>Success</title>
+        <css src="Svea_Checkout::css/svea.css"/>
     </head>
 
     <body>
-
-        <referenceBlock name="minicart" remove="true"/>
-        <referenceBlock name="authentication-popup" remove="true" />
-
         <referenceContainer name="page.messages">
             <block class="Svea\Checkout\Block\Messages" name="svea_checkout_validationmessages"/>
         </referenceContainer>
         <referenceContainer name="content">
-            <container name="svea_checkoutSidebar" as="svea_checkoutSidebar" label="SveacCheckout Sidebar" htmlTag="div" htmlId="svea_checkoutSidebar">
-                <block class="Svea\Checkout\Block\Success" name="svea_checkout_success" template="success.phtml" cacheable="false" />
+            <container name="svea_checkoutSidebar" as="svea_checkoutSidebar" label="SveacCheckout Sidebar" htmlTag="div"
+                       htmlId="svea_checkoutSidebar">
+                <block class="Svea\Checkout\Block\Success" name="svea_checkout_success" template="success.phtml"
+                       cacheable="false"/>
                 <block class="Magento\GoogleAdwords\Block\Code" name="google.adwords.code" template="code.phtml"/>
             </container>
         </referenceContainer>
