--- a/view/frontend/web/css/source/lib/slick-theme.less
+++ b/view/frontend/web/css/source/lib/slick-theme.less
@@ -2,7 +2,7 @@
 
 // Default Variables
 
-@slick-font-path: "./fonts/";
+@slick-font-path: "./../fonts/";
 @slick-font-family: "slick";
 @slick-loader-path: "./";
 @slick-arrow-color: white;
@@ -12,9 +12,9 @@
 @slick-next-character: url("../images/right-arrow.svg");
 @slick-dot-character: "•";
 @slick-dot-size: 6px;
-@slick-opacity-default: 0.75;
+@slick-opacity-default: 1;
 @slick-opacity-on-hover: 1;
-@slick-opacity-not-active: 0.25;
+@slick-opacity-not-active: 0.5;
 
 /* Slider */
 .slick-loading .slick-list{
@@ -57,7 +57,6 @@
 
 .slick-prev:before, .slick-next:before {
     font-family: @slick-font-family;
-    font-size: 20px;
     line-height: 1;
     color: @slick-arrow-color;
     opacity: @slick-opacity-default;
