--- a/view/frontend/templates/success.phtml
+++ b/view/frontend/templates/success.phtml
@@ -45,6 +45,9 @@ $realId = $block->getRealOrderId();
                     </li>
                 </ul>
             </div>
+            <div class="svea-img-container"><img
+                        src="<?= $this->getViewFileUrl('Svea_Checkout::images/svea-ekonomi.png') ?>"
+                        alt="<?= __('Svea Checkout') ?>"/></div>
             <?php if ($orderItems) : ?>
                 <div class="svea-checkout-order__items">
                 <strong><?= __('Order Details') ?></strong>
@@ -70,7 +73,7 @@ $realId = $block->getRealOrderId();
                     <?php endif; ?>
                     <tr>
                         <td class="col-item"><?= __('Shipping:') ?></td>
-                        <td class="col-amount"><?= $orderData->formatPrice($orderData->getData('shipping_amount')) . '<span class="count">(' . $orderData->getData('shipping_method') . ')</span >' ?></td>
+                        <td class="col-amount"><?= $orderData->formatPrice($orderData->getData('shipping_amount')) . '<span class="count">(' . $orderData->getData('shipping_description') . ')</span >' ?></td>
                     </tr>
                     <tr>
                         <td class="col-item"><?= __('Payment Method:') ?></td>
