--- a/view/frontend/templates/checkout/shipping.phtml
+++ b/view/frontend/templates/checkout/shipping.phtml
@@ -26,7 +26,8 @@ $shippingAddress = $quote->getShippingAddress();
             </select>
             <input class="postcode" type="text" id="postcode-box" name="postal"
                    placeholder="<?php echo __('Postal code') ?>"
-                   value="<?= ($shippingAddress === null || !$shippingAddress->getPostcode()) ? __('') : $shippingAddress->getPostcode() ?>" autofocus />
+                   value="<?= ($shippingAddress === null || !$shippingAddress->getPostcode()) ? __('') : $shippingAddress->getPostcode() ?>"
+                   autofocus required/>
             <button type="submit" id="shipping-method-button"
                     class="action svea-primary" title="<?php echo __('Choose Delivery'); ?>">
                 <span><?php echo __('Choose Delivery'); ?></span>
